Fix header image overflow

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -20,7 +20,7 @@ body {
   img {
     margin: auto;
     display: block;
-    max-width: 1200px;
+    width: 1200px;
   }
 }
 
